# PM2Dash

./: .env.example  README.md  pyproject.toml  requirements.txt  run.py
app/: main.py
app/routes/: auth_routes.py  pm2_routes.py
app/services/: auth_service.py  pm2_service.py
app/templates/: login.html  process.html
